[project]
name = "lra-code-poetry"
version = "0.1.0"
description = "Tooling for replicating experiments from the LRA paper."
authors = [
    {name = "sboussam",email = "sana.boussam@inria.fr"}
]
license = "LICENSE"
readme = "README.md"
package-mode = false
requires-python = ">=3.10"

dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


